--- a/tp-js/tpJsWebResponsiveSpa/scss/styles copy.scss
+++ b/tp-js/tpJsWebResponsiveSpa/scss/styles copy.scss
@@ -2,17 +2,25 @@
 media-min or respond-below or media-breakpoint-down
 , media-max or respond-above ,  media-between or respond-between */
 @import "common.css";
-h2, h3 {
-  color: #001780;
-  font-weight: bold;
-  text-decoration: underline;
+
+$couleurPref : red;
+
+@mixin with-border($color,$epaisseur){
+  border: $epaisseur solid $color ;
 }
 
-h2:hover, h3:hover {
-  color: red;
-  font-weight: bold;
-  text-decoration: underline;
+h2 {
+   color : $couleurPref;
+   &:hover{
+     color: darken($couleurPref,15%)
+   }
 }
+
+h3 {
+  @extend h2; 
+  text-decoration: underline;
+  @include with-border(red,2px);
+} 
 
 /*
 @media screen and (max-width: 575px) {
@@ -40,9 +48,10 @@ h2:hover, h3:hover {
   }
 }
 */
+
 .enEvidence {
   font-weight: bold;
-  color: #001780 !important;
+  color: $couleurPref !important;
 }
 
 p {
@@ -192,38 +201,21 @@ img {
   0% {
     transform: rotate(10deg);
   }
-  10% {
+  25% {
     transform: rotate(-10deg);
-  }
-  20% {
-    transform: rotate(10deg);
-  }
-  30% {
-    transform: rotate(-10deg);
-  }
-  40% {
-    transform: rotate(10deg);
   }
   50% {
-    transform: rotate(-10deg);
-  }
-  60% {
     transform: rotate(10deg);
   }
-  70% {
-    transform: rotate(-10deg);
-  }
-  80% {
-    transform: rotate(10deg);
-  }
-  90% {
+  75% {
     transform: rotate(-10deg);
   }
   100% {
     transform: rotate(0deg);
   }
 }
-.secouer:hover {
+
+.secouer:hover{
   animation: secouer-anim 3s;
 }
 
@@ -268,8 +260,6 @@ img {
   height: 200px;
 }
 
-/*# sourceMappingURL=styles.css.map */
-/*# sourceMappingURL=styles.css.map */
 /*# sourceMappingURL=styles.css.map */
 
 /*# sourceMappingURL=styles.css.map */
