--- a/tp-js/tpJsWebResponsiveSpa/css/styles copy.css
+++ b/tp-js/tpJsWebResponsiveSpa/css/styles copy.css
@@ -3,15 +3,15 @@ media-min or respond-below or media-breakpoint-down
 , media-max or respond-above ,  media-between or respond-between */
 @import "common.css";
 h2, h3 {
-  color: #001780;
-  font-weight: bold;
-  text-decoration: underline;
+  color: red;
+}
+h2:hover, h3:hover {
+  color: #b30000;
 }
 
-h2:hover, h3:hover {
-  color: red;
-  font-weight: bold;
+h3 {
   text-decoration: underline;
+  border: 2px solid red;
 }
 
 /*
@@ -42,7 +42,7 @@ h2:hover, h3:hover {
 */
 .enEvidence {
   font-weight: bold;
-  color: #001780 !important;
+  color: red !important;
 }
 
 p {
@@ -189,39 +189,17 @@ img {
 }
 
 @keyframes secouer-anim {
-  0% {
-    transform: rotate(10deg);
-  }
-  10% {
-    transform: rotate(-10deg);
-  }
-  20% {
-    transform: rotate(10deg);
-  }
-  30% {
-    transform: rotate(-10deg);
-  }
-  40% {
-    transform: rotate(10deg);
-  }
-  50% {
-    transform: rotate(-10deg);
-  }
-  60% {
-    transform: rotate(10deg);
-  }
-  70% {
-    transform: rotate(-10deg);
-  }
-  80% {
-    transform: rotate(10deg);
-  }
-  90% {
-    transform: rotate(-10deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
+  0% { transform: rotate(10deg);  }
+  10% { transform: rotate(-10deg);  }
+  20% { transform: rotate(10deg);  }
+  30% { transform: rotate(-10deg);  }
+  40% { transform: rotate(10deg);  }
+  50% { transform: rotate(-10deg);  }
+  60% { transform: rotate(10deg);  }
+  70% { transform: rotate(-10deg);  }
+  80% { transform: rotate(10deg);  }
+  90% { transform: rotate(-10deg);  }
+  100% { transform: rotate(0deg);  }
 }
 .secouer:hover {
   animation: secouer-anim 3s;
@@ -268,7 +246,6 @@ img {
   height: 200px;
 }
 
-/*# sourceMappingURL=styles.css.map */
 /*# sourceMappingURL=styles.css.map */
 /*# sourceMappingURL=styles.css.map */
 
