--- a/my-app/src/app/basic/basic.component.html
+++ b/my-app/src/app/basic/basic.component.html
@@ -2,7 +2,7 @@
 <br/>
 
 <tabset>
-    <tab heading="calculatrice)">
+    <tab heading="calculatrice">
        <app-calculatrice></app-calculatrice>
    </tab>
    <tab heading="calcul tva">
@@ -21,10 +21,10 @@ curseur = {{valeurCurseur}}
      
 <tabset>
         <tab heading="xy">
-            <app-xy></app-xy>
+           <app-xy></app-xy>
        </tab>
        <tab heading="zz">
-        <app-zz></app-zz>
+           <app-zz></app-zz>
         </tab>
 </tabset>
 
