--- a/my-app/src/app/footer/footer.component.html
+++ b/my-app/src/app/footer/footer.component.html
@@ -1,3 +1,6 @@
 <hr/>
-<p class="piedPage">footer - 
-  </p> 
+<p class="piedPage">footer - couleurFondPreferee:
+  <select [(ngModel)]="preferencesService.couleurFondPreferee" >
+      <option *ngFor="let c of listeCouleurs" [ngValue]="c">{{c}}</option>
+  </select>
+</p> 
