--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -1,4 +1,6 @@
-<p class="entete">header  -
+<p class="entete"
+[style.background-color]="preferencesService.couleurFondPreferee"
+>header  -
     <a routerLink='/ngr-welcome'> welcome</a> &nbsp;
     <a routerLink='/ngr-basic'> basic</a> &nbsp;
     <a routerLink='/ngr-login'> login</a> &nbsp;
