--- a/my-app/src/app/basic/tva/tva.component.html
+++ b/my-app/src/app/basic/tva/tva.component.html
@@ -16,7 +16,7 @@
     <input type="button" value="calculer Tva" (click)="onCalculerTvaEtTtc()" /> <br/>
     -->
     <div *ngIf="tva != 0">
-      tva= <span>{{tva }}</span> <br/>
-      ttc= <span>{{ttc }}</span> <br/>
+      tva= <span>{{tva | number:'1.0-2' }}</span> <br/>
+      ttc= <span>{{ttc | currency:'EUR':'symbol':'1.0-2'}}</span> <br/>
     </div>
   </div>
