--- a/my-app/src/app/basic/basic.component.html
+++ b/my-app/src/app/basic/basic.component.html
@@ -1,6 +1,6 @@
 <p>basic works!</p>
 <br/>
-
+<!--
 <tabset>
     <tab heading="calculatrice">
        <app-calculatrice></app-calculatrice>
@@ -9,6 +9,19 @@
        <app-tva></app-tva>
     </tab>
 </tabset>
+-->
+
+
+    <bsu-toggle-panel title="calculatrice">
+       <app-calculatrice></app-calculatrice>
+   </bsu-toggle-panel>
+    <p></p>
+   <bsu-toggle-panel title="calcul tva">
+       <app-tva></app-tva>
+    </bsu-toggle-panel>
+
+
+
 <hr/>
 
         
