avec menu deroulant

--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -5,5 +5,6 @@
     <a routerLink='/ngr-basic'> basic</a> &nbsp;
     <a routerLink='/ngr-login'> login</a> &nbsp;
 </p>
+<bsu-nav-bar  [menuDefs]="myMenuDefs"></bsu-nav-bar>
 
 
