--- a/my-app/src/app/login/login.component.html
+++ b/my-app/src/app/login/login.component.html
@@ -33,6 +33,6 @@
     </div>
   </div>
 </form>
-message: <span >{{message}} </span> 
+message: <span [style.color]="authenticated?'green':'red'">{{message | uppercase }} </span> 
 <hr/>
 NB: bonnes valeurs (pour TP): admin1 , pwdadmin1 , admin
