--- a/my-app/src/bs-util/css/_base.scss
+++ b/my-app/src/bs-util/css/_base.scss
@@ -1,8 +1,8 @@
 /* _base.scss = variables + mixins , @import in styles.scss */
 
-$default-theme : "blue-theme";
+//$default-theme : "blue-theme";
 //or
-//$default-theme : "green-theme";
+$default-theme : "green-theme";
 //or ...
 //$default-theme : "red-theme";
 
