--- a/my-app/src/app/basic/basic.component.html
+++ b/my-app/src/app/basic/basic.component.html
@@ -1,5 +1,9 @@
 <p>basic works!</p>
 <br/>
+<app-seuil></app-seuil>
+<hr/>
+<app-list-prod></app-list-prod>
+<hr/>
 <!--
 <tabset>
     <tab heading="calculatrice">
