--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -4,7 +4,10 @@
     <a routerLink='/ngr-welcome'> welcome</a> &nbsp;
     <a routerLink='/ngr-basic'> basic</a> &nbsp;
     <a routerLink='/ngr-login'> login</a> &nbsp;
+    <a routerLink='/ngr-produit'> produit</a> &nbsp;
+    <a routerLink='/ngr-conversion'> conversion</a> &nbsp;
+    <a routerLink='/ngr-admin-devise'> admin-devise</a> &nbsp;<br/>
+    nbProd : {{nbProdPrixInferieurSeuilMaxi}}
+<bsu-nav-bar [brandTitle]="titre" [menuDefs]="myMenuDefs"></bsu-nav-bar>
 </p>
-<bsu-nav-bar  [menuDefs]="myMenuDefs"></bsu-nav-bar>
-
 
